--- a/cytoscapeweb/trunk/website/src/js/jquery/jquery-ui-1.7.2.custom/css/custom-theme/jquery-ui-1.7.2.custom.css
+++ b/cytoscapeweb/trunk/website/src/js/jquery/jquery-ui-1.7.2.custom/css/custom-theme/jquery-ui-1.7.2.custom.css
@@ -52,7 +52,7 @@
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Helvetica,Arial,sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #ababab; background: #ffffff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #000000; }
 .ui-widget-content a { color: #000000; }
-.ui-widget-header { border: 1px solid #363636; background: #363636 url(images/ui-bg_flat_75_363636_40x100.png) 50% 50% repeat-x; color: #000000; font-weight: bold; }
+.ui-widget-header { border: 1px solid #363636; background: #363636 url(images/ui-bg_flat_75_363636_40x100.png) 50% 50% repeat-x; color: #FFF; font-weight: bold; }
 .ui-widget-header a { color: #000000; }
 
 /* Interaction states
@@ -81,7 +81,7 @@
 /* states and images */
 .ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_000000_256x240.png); }
 .ui-widget-content .ui-icon {background-image: url(images/ui-icons_000000_256x240.png); }
-.ui-widget-header .ui-icon {background-image: url(images/ui-icons_000000_256x240.png); }
+.ui-widget-header .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
 .ui-state-default .ui-icon { background-image: url(images/ui-icons_ffffff_256x240.png); }
 .ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
 .ui-state-active .ui-icon {background-image: url(images/ui-icons_000000_256x240.png); }
