--- a/cytoscapeweb/trunk/website/src/css/content/demo.css
+++ b/cytoscapeweb/trunk/website/src/css/content/demo.css
@@ -200,7 +200,7 @@ input[type=button].ui-state-default { cursor: pointer; }
 #info .tablesorter th.headerSortDown label { background-image: url("../../img/layout/open_arrow/white/down.png"); background-position: right center; }
 #info .tablesorter tr td { font-family: "Monaco", "Courier New", monospace; font-size: 0.85em; line-height: 1.25; }
 #info .tablesorter input { font-family: "Monaco", "Courier New", monospace; }
-#info .tablesorter input:hover, input:focus { border-color: #c1c1c1; background: #ffffff; }
+#info .tablesorter input:hover, input:focus { border-color: #c1c1c1 !important; background: #ffffff; }
 #info .tablesorter input { border-color: transparent; width: auto; background: transparent; }
 #info .tablesorter td[name=id] { font-weight: bold; border-right: 4px double #cacaca; }
 #info .tablesorter td.not_editable { cursor: default; }
@@ -233,7 +233,7 @@ input[type=button].ui-state-default { cursor: pointer; }
 .ui-tabs-vertical { }
 .ui-tabs-vertical .ui-tabs-nav { padding: .2em .1em .2em .2em; float: left; }
 .ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; }
-.ui-tabs-vertical .ui-tabs-nav li a { display:block; }
+.ui-tabs-vertical .ui-tabs-nav li a { display:block; width: 100%; }
 .ui-tabs-vertical .ui-tabs-nav li.ui-tabs-selected { padding-bottom: 0; padding-right: .1em; border-right-width: 1px; border-right-width: 1px; }
 .ui-tabs-vertical .ui-tabs-panel { padding: 0.3em; float: right; width: 20em; overflow: auto; }
 
