Added a "binary" flag, to prevent the importer from sending back to JS the bytes and the string every time, even when when the expected type is only one.
git-svn-id: http://chianti.ucsd.edu/svn@20482 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/file/src/Importer.mxml
+++ b/cytoscapeweb/trunk/file/src/Importer.mxml
@@ -20,6 +20,7 @@
             private var _fr:FileReference;
             private var _typeFilter:String = "*;*.*";
             private var _typeDescription:String = "Any file";
+            private var _binary:Boolean = false;
 
             public function callExternalInterface(functionName:String, argument:*=undefined):* {
                 if (ExternalInterface.available) {
@@ -42,6 +43,9 @@
                 });
                 ExternalInterface.addCallback("typeDescription", function(desc:String):void {
                     _typeDescription = desc;
+                });
+                ExternalInterface.addCallback("binary", function(binary:Boolean):void {
+                    _binary = binary;
                 });
                 callExternalInterface("_onReady");
             }
@@ -79,18 +83,16 @@
             private function onLoadComplete(e:Event):void {
                 //get the data from the file as a ByteArray
                 var data:ByteArray = _fr.data;
-                var bytes:Array = [];
-
-                //read the bytes of the file as a string
-                var string:String = data.toString();
+                var dataObj:Object = { metadata: metadata() };
                 
-                //read bytes as primitive
-                while (data.bytesAvailable > 0) {
-                    bytes.push(data.readByte());
+                if (_binary) {
+                    var bytes:Array = [];
+                    while (data.bytesAvailable > 0) { bytes.push(data.readByte()); }
+                    dataObj.bytes = bytes;
+                } else {
+                    dataObj.string = data.toString();
                 }
-                
-                var dataObj:Object = { bytes: bytes, string: string, metadata: metadata() };
-                
+
                 //fire fopen
                 callExternalInterface("_onComplete", dataObj);
                 
